source/externs/X11/X.h


#define DoRed			(1<<0)
#define DoGreen			(1<<1)
#define DoBlue			(1<<2)