source/externs/X11/Xproto.d


struct xSetSelectionOwnerReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window window;
    Atom selection;
    Time time;
}

struct xConvertSelectionReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window requestor;
    Atom selection, target, property;
    Time time;
    }

struct xSendEventReq {
    CARD8 reqType;
    BOOL propagate;
    CARD16 length;
    Window destination;
    CARD32 eventMask;
    xEvent event;
}

struct xGrabPointerReq {
    CARD8 reqType;
    BOOL ownerEvents;
    CARD16 length;
    Window grabWindow;
    CARD16 eventMask;
    BYTE pointerMode, keyboardMode;
    Window confineTo;
    Cursor cursor;
    Time time;
}

struct xGrabButtonReq {
    CARD8 reqType;
    BOOL ownerEvents;
    CARD16 length;
    Window grabWindow;
    CARD16 eventMask;
    BYTE pointerMode, keyboardMode;
    Window confineTo;
    Cursor cursor;
    CARD8 button;
    BYTE pad;
    CARD16 modifiers;
}

struct xUngrabButtonReq {
    CARD8 reqType;
    CARD8 button;
    CARD16 length;
    Window grabWindow;
    CARD16 modifiers;
    CARD16 pad;
}

struct xChangeActivePointerGrabReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Cursor cursor;
    Time time;
    CARD16 eventMask;
    CARD16 pad2;
}

struct xGrabKeyboardReq {
    CARD8 reqType;
    BOOL ownerEvents;
    CARD16 length;
    Window grabWindow;
    Time time;
    BYTE pointerMode, keyboardMode;
    CARD16 pad;
}

struct xGrabKeyReq {
    CARD8 reqType;
    BOOL ownerEvents;
    CARD16 length;
    Window grabWindow;
    CARD16 modifiers;
    CARD8 key;
    BYTE pointerMode, keyboardMode;
    BYTE pad1, pad2, pad3;
}

struct xUngrabKeyReq {
    CARD8 reqType;
    CARD8 key;
    CARD16 length;
    Window grabWindow;
    CARD16 modifiers;
    CARD16 pad;
}

struct xAllowEventsReq {
    CARD8 reqType;
    CARD8 mode;
    CARD16 length;
    Time time;
}

struct xGetMotionEventsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window window;
    Time start, stop;
}

struct xTranslateCoordsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window srcWid, dstWid;
    INT16 srcX, srcY;
}

struct xWarpPointerReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window srcWid, dstWid;
    INT16 srcX, srcY;
    CARD16 srcWidth, srcHeight;
    INT16 dstX, dstY;
}

struct xSetInputFocusReq {
    CARD8 reqType;
    CARD8 revertTo;
    CARD16 length;
    Window focus;
    Time time;
}

struct xOpenFontReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Font fid;
    CARD16 nbytes;
    BYTE pad1, pad2;	/* string follows on word boundary */
}

struct xQueryTextExtentsReq {
    CARD8 reqType;
    BOOL oddLength;
    CARD16 length;
    Font fid;
    }

struct xListFontsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    CARD16 maxNames;
    CARD16 nbytes;	/* followed immediately by string bytes */
}

alias xListFontsWithInfoReq = xListFontsReq;

struct xSetFontPathReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    CARD16 nFonts;
    BYTE pad1, pad2;	/* LISTofSTRING8 follows on word boundary */
}

struct xCreatePixmapReq {
    CARD8 reqType;
    CARD8 depth;
    CARD16 length;
    Pixmap pid;
    Drawable drawable;
    CARD16 width, height;
}

struct xCreateGCReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    GContext gc;
    Drawable drawable;
    CARD32 mask;
}

struct xChangeGCReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    GContext gc;
    CARD32 mask;
}

struct xCopyGCReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    GContext srcGC, dstGC;
    CARD32 mask;
}

struct xSetDashesReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    GContext gc;
    CARD16 dashOffset;
    CARD16 nDashes;	/* length LISTofCARD8 of values following */
}

struct xSetClipRectanglesReq {
    CARD8 reqType;
    BYTE ordering;
    CARD16 length;
    GContext gc;
    INT16 xOrigin, yOrigin;
}

struct xClearAreaReq {
    CARD8 reqType;
    BOOL exposures;
    CARD16 length;
    Window window;
    INT16 x, y;
    CARD16 width, height;
}

struct xCopyAreaReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Drawable srcDrawable, dstDrawable;
    GContext gc;
    INT16 srcX, srcY, dstX, dstY;
    CARD16 width, height;
}

struct xCopyPlaneReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Drawable srcDrawable, dstDrawable;
    GContext gc;
    INT16 srcX, srcY, dstX, dstY;
    CARD16 width, height;
    CARD32 bitPlane;
}

struct xPolyPointReq {
    CARD8 reqType;
    BYTE coordMode;
    CARD16 length;
    Drawable drawable;
    GContext gc;
}

alias xPolyLineReq = xPolyPointReq;  /* same request structure */

/* The following used for PolySegment, PolyRectangle, PolyArc, PolyFillRectangle, PolyFillArc */

struct xPolySegmentReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Drawable drawable;
    GContext gc;
}

alias xPolyArcReq = xPolySegmentReq;
alias xPolyRectangleReq = xPolySegmentReq;
alias xPolyFillRectangleReq = xPolySegmentReq;
alias xPolyFillArcReq = xPolySegmentReq;

struct xFillPolyReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Drawable drawable;
    GContext gc;
    BYTE shape;
    BYTE coordMode;
    CARD16 pad1;
}


struct xPutImageReq {
    CARD8 reqType;
    CARD8 format;
    CARD16 length;
    Drawable drawable;
    GContext gc;
    CARD16 width, height;
    INT16 dstX, dstY;
    CARD8 leftPad;
    CARD8 depth;
    CARD16 pad;
}

struct xGetImageReq {
    CARD8 reqType;
    CARD8 format;
    CARD16 length;
    Drawable drawable;
    INT16 x, y;
    CARD16 width, height;
    CARD32 planeMask;
}

/* the following used by PolyText8 and PolyText16 */

struct xPolyTextReq {
    CARD8 reqType;
    CARD8 pad;
    CARD16 length;
    Drawable drawable;
    GContext gc;
    INT16 x, y;		/* items (xTextElt) start after struct */
}

alias xPolyText8Req = xPolyTextReq;
alias xPolyText16Req = xPolyTextReq;

struct xImageTextReq {
    CARD8 reqType;
    BYTE nChars;
    CARD16 length;
    Drawable drawable;
    GContext gc;
    INT16 x, y;
}

alias xImageText8Req = xImageTextReq;
alias xImageText16Req = xImageTextReq;

struct xCreateColormapReq {
    CARD8 reqType;
    BYTE alloc;
    CARD16 length;
    Colormap mid;
    Window window;
    VisualID visual;
}

struct xCopyColormapAndFreeReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap mid;
    Colormap srcCmap;
}

struct xAllocColorReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
    CARD16 red, green, blue;
    CARD16 pad2;
}

struct xAllocNamedColorReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
    CARD16 nbytes;	/* followed by structure */
    BYTE pad1, pad2;
}

struct xAllocColorCellsReq {
    CARD8 reqType;
    BOOL contiguous;
    CARD16 length;
    Colormap cmap;
    CARD16 colors, planes;
}

struct xAllocColorPlanesReq {
    CARD8 reqType;
    BOOL contiguous;
    CARD16 length;
    Colormap cmap;
    CARD16 colors, red, green, blue;
}

struct xFreeColorsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
    CARD32 planeMask;
}

struct xStoreColorsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
}

struct xStoreNamedColorReq {
    CARD8 reqType;
    CARD8 flags;   /* DoRed, DoGreen, DoBlue, as in xColorItem */
    CARD16 length;
    Colormap cmap;
    CARD32 pixel;
    CARD16 nbytes;  /* number of name string bytes following structure */
    BYTE pad1, pad2;
    }

struct xQueryColorsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
}

struct xLookupColorReq {    /* followed  by string of length len */
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Colormap cmap;
    CARD16 nbytes;  /* number of string bytes following structure*/
    BYTE pad1, pad2;
}

struct xCreateCursorReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Cursor cid;
    Pixmap source, mask;
    CARD16 foreRed, foreGreen, foreBlue;
    CARD16 backRed, backGreen, backBlue;
    CARD16 x, y;
}

struct xCreateGlyphCursorReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Cursor cid;
    Font source, mask;
    CARD16 sourceChar, maskChar;
    CARD16 foreRed, foreGreen, foreBlue;
    CARD16 backRed, backGreen, backBlue;
}

struct xRecolorCursorReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Cursor cursor;
    CARD16 foreRed, foreGreen, foreBlue;
    CARD16 backRed, backGreen, backBlue;
}

struct xQueryBestSizeReq {
    CARD8 reqType;
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD16 length;
    Drawable drawable;
    CARD16 width, height;
}

struct xQueryExtensionReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    CARD16 nbytes;	/* number of string bytes following structure */
    BYTE pad1, pad2;
}

struct xSetModifierMappingReq {
    CARD8 reqType;
    CARD8 numKeyPerModifier;
    CARD16 length;
}

struct xSetPointerMappingReq {
    CARD8 reqType;
    CARD8 nElts;	/* how many elements in the map */
    CARD16 length;
}

struct xGetKeyboardMappingReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    KeyCode firstKeyCode;
    CARD8 count;
    CARD16 pad1;
}

struct xChangeKeyboardMappingReq {
    CARD8 reqType;
    CARD8 keyCodes;
    CARD16 length;
    KeyCode firstKeyCode;
    CARD8 keySymsPerKeyCode;
    CARD16 pad1;
}

struct xChangeKeyboardControlReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    CARD32 mask;
}

struct xBellReq {
    CARD8 reqType;
    INT8 percent;  /* -100 to 100 */
    CARD16 length;
}

struct xChangePointerControlReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    INT16 accelNum, accelDenum;
    INT16 threshold;
    BOOL doAccel, doThresh;
}

struct xSetScreenSaverReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    INT16 timeout, interval;
    BYTE preferBlank, allowExpose;
    CARD16 pad2;
}

struct xChangeHostsReq {
    CARD8 reqType;
    BYTE mode;
    CARD16 length;
    CARD8 hostFamily;
    BYTE pad;
    CARD16 hostLength;
}

struct xListHostsReq {
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    }

struct xChangeModeReq {
    CARD8 reqType;
    BYTE mode;
    CARD16 length;
    }

alias xSetAccessControlReq = xChangeModeReq;
alias xSetCloseDownModeReq = xChangeModeReq;
alias xForceScreenSaverReq = xChangeModeReq;

struct xRotatePropertiesReq { /* followed by LIST of ATOM */
    CARD8 reqType;
    BYTE pad;
    CARD16 length;
    Window window;
    CARD16 nAtoms;
    INT16 nPositions;
    }



/* Reply codes */

enum X_Reply =		1		/* Normal reply */;
enum X_Error =		0		/* Error */;

/* Request codes */
